security_group.tf
resource "aws_security_group" "my-instance-securitygroup" {
  vpc_id = aws_vpc.main.id
  name   = "my-instance-securitygroup"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "my-instance-securitygroup"
  }
}
